trying to fix layout to be ok also on mobile devices

--- a/static/main.css
+++ b/static/main.css
@@ -17,6 +17,10 @@ body {
 	padding: 0;
 }
 
+#map, .content {
+   min-height: 1000px;
+}
+
 .map-popup {
 	font-size: 1.2em;
 }
@@ -43,7 +47,7 @@ body {
 .bottom {
 	bottom: 0;
 	margin: 0 0 20px 20px;
-	position: absolute;
+    position: absolute;
 }
 
 .navbar-default {
@@ -52,7 +56,11 @@ body {
 }
 
 .nav {
-	padding: 10px 0 12px 0;
+    padding: 10px 0 10px 0;
+}
+
+.navbar-brand>img {
+    height: 45px;
 }
 
 .navbar-nav>li {
